--- a/frontend/src/components/css/MovieCard.css
+++ b/frontend/src/components/css/MovieCard.css
@@ -7,6 +7,10 @@
     margin-top: 5rem !important;
 }
 
+.movie-card-rows {
+    margin-top: 3rem !important;
+    justify-content: center !important;
+}
 
 .btn {
     max-width: 8rem !important;
